webui-API: add forward and reply backend functionality.
